--- a/style.css
+++ b/style.css
@@ -3,12 +3,32 @@
     body {
         font-family: "TT Lakes", sans-serif;
         font-size: 16px;
-        margin:0;
+        margin: 0;
         padding: 0;
         display: flex;
         flex-direction: column;
+        box-sizing: border-box;
     }
-/*header*/
+
+    h1 {
+        color: rgb(27, 28, 33);
+        font-size: 28px;
+        font-weight: 700;
+        line-height: 40px;
+        letter-spacing: -0.6px;
+        text-align: left;
+    }
+
+    p {
+        color: rgb(27, 28, 33);
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+        letter-spacing: 0.2px;
+        text-align: left;
+    }
+
+    /*header*/
     .header {
         width: 100%;
         height: 88px;
@@ -17,27 +37,30 @@
         justify-content: space-between;
         align-items: center;
         flex-direction: row;
-        padding-left:16px;
-        padding-right:16px;
+        padding-left: 16px;
+        padding-right: 16px;
         border-bottom: 1px solid rgb(217, 255, 245);
     }
 
-    .header__element{
+    .header__element {
         padding: 0;
     }
-    .menu-burger{
+
+    .menu-burger {
         width: 40px;
         height: 40px;
         cursor: pointer;
     }
 
-    .logo{
+    .logo {
         width: 96.55px;
         height: 50.81px;
     }
-    .menu{
+
+    .menu {
         display: flex;
     }
+
     .menu__list {
         margin: 0;
         padding: 0;
@@ -45,13 +68,14 @@
 
     .menu__item {
         display: inline-block;
-        margin-left:0;
+        margin-left: 0;
         margin-right: 16px;
         padding: 0;
         align-self: center;
     }
+
     .menu__item:last-child {
-        margin-right: 0px;
+        margin-right: 0;
     }
 
     .menu__link {
@@ -63,15 +87,18 @@
 
     }
 
-    .menu--primary{
+    /*Скрыть первое меню на маленьком экране*/
+    .menu--primary {
         display: none;
     }
-    .menu--secondary{
+
+    .menu--secondary {
         align-items: center;
 
     }
+
     /* divider */
-    .menu--secondary::before{
+    .menu--secondary::before {
 
         content: "";
         display: inline-block;
@@ -93,8 +120,7 @@
     }
 
     /*Иконки меню*/
-
-    .menu-burger::after{
+    .menu-burger::after {
 
         background-image: url('image/burgerburger.svg');
         width: 40px;
@@ -102,28 +128,28 @@
     }
 
 
-    .menu__link--call::after{
+    .menu__link--call::after {
         content: "";
         background-image: url('image/callcall.svg');
         width: 40px;
         height: 40px;
     }
 
-    .menu__link--write::after{
+    .menu__link--write::after {
 
         background-image: url('image/chatmessage.svg');
         width: 40px;
         height: 40px;
     }
 
-    .menu__link--login::after{
+    .menu__link--login::after {
         content: "";
         background-image: url('image/profileuser.svg');
         width: 40px;
         height: 40px;
     }
 
-    .menu__link--status::after{
+    .menu__link--status::after {
         content: "";
         background-image: url('image/repairsetting.svg');
         display: block;
@@ -132,7 +158,7 @@
 
     }
 
-    .menu__link--application::after{
+    .menu__link--application::after {
         content: "";
         background-image: url('image/checkstatussearch.svg');
         display: block;
@@ -142,7 +168,7 @@
 
     }
 
-    menu__link::after, .menu-burger::after{
+    menu__link::after, .menu-burger::after {
         content: "";
         display: block;
         width: 40px;
@@ -152,23 +178,143 @@
         background-repeat: no-repeat;
     }
 
-    .menu__link{
+    .menu__link {
         display: flex;
         align-items: center;
         justify-content: center;
     }
-/*Скрыть текст*/
-    .menu__item--hidden-link{
+
+    /*Скрыть текст в меню*/
+    .menu__item--hidden-link {
         line-height: 0;
         font-size: 0;
         color: transparent;
     }
-    /*content*/
+
+    /*Content*/
+    .main{
+        magin:0;
+        padding: 0;
+    }
     .main section {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        margin: 0;
+        padding: 0;
     }
+
+    .main__title {
+        width: 100%;
+        height: 40px;
+        text-align: left;
+        margin: 24px 0px;
+        padding: 0 16px;
+        vertical-align: center;
+    }
+    /* highlight */
+    .main__title::before {
+
+        content: "";
+        display: inline-block;
+        margin-right:16px; /* Расстояние от разделителя до элементов меню */
+        width: 2px;
+        height: 32px;
+        border-radius: 1px;
+        background: rgb(234, 234, 234);
+        align-self:start;
+        vertical-align: middle;
+        width: 4px;
+        height: 40px;
+        transform: rotate(180.00deg);
+        background: rgb(65, 246, 215);
+
+    }
+
+    .navigation{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        padding-left:16px;
+    }
+    .navigation__list{
+        width: 100%;
+        height:100%;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        list-style-type: none;
+        overflow-x: scroll;
+        white-space: nowrap;
+
+    }
+
+
+
+
+
+    .navigation__link{
+        width: 246px;
+        height: 40px;
+        box-sizing: border-box;
+        background: rgb(255, 255, 255);
+        color: rgb(126, 126, 130);
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        text-align: left;
+        padding: 8px 9.3px 8px 16.54px;
+        margin:0;
+        text-decoration: none;
+        min-height: 40px;
+    }
+    .navigation__link:first-child {
+        margin-left:16px;
+    }
+
+    .navigation__link--active{
+        border: 2px solid rgb(184, 255, 236);
+        border-radius: 6px;
+        text-decoration: none;
+    }
+
+
+    .article{
+        margin: 0;
+        padding: 0;
+
+    }
+
+    .article__text{
+        width: 288px;
+        height: 90px;
+        margin-left:auto;
+        margin-right:auto;
+        text-align: left;
+    }
+
+    .article__text--hidden{
+        line-height: 0;
+        font-size: 0;
+        color: transparent;
+    }
+
+    .article__text--hidden::before{
+        content: "Читать далее";
+        display: inline-block;
+
+    }
+
+
+
+
+
 
 
 }
