--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    border: 1px solid red;
+}
+
 /* Стили для мобильной версии (320px) */
 @media screen and (min-width: 320px) {
     body {
@@ -30,7 +34,7 @@
 
     /*header*/
     .header {
-        width: 100%;
+        /*width: 100%;*/
         height: 88px;
         background: rgb(255, 255, 255);
         display: flex;
@@ -192,10 +196,11 @@
     }
 
     /*Content*/
-    .main{
-        magin:0;
+    .main {
+        magin: 0;
         padding: 0;
     }
+
     .main section {
         display: flex;
         flex-direction: column;
@@ -205,24 +210,22 @@
     }
 
     .main__title {
-        width: 100%;
+        /*width: 100%;*/
         height: 40px;
         text-align: left;
         margin: 24px 0px;
         padding: 0 16px;
         vertical-align: center;
     }
+
     /* highlight */
     .main__title::before {
 
         content: "";
         display: inline-block;
-        margin-right:16px; /* Расстояние от разделителя до элементов меню */
-        width: 2px;
-        height: 32px;
+        margin-right: 16px; /* Расстояние от разделителя до элементов меню */
         border-radius: 1px;
-        background: rgb(234, 234, 234);
-        align-self:start;
+        align-self: start;
         vertical-align: middle;
         width: 4px;
         height: 40px;
@@ -231,18 +234,20 @@
 
     }
 
-    .navigation{
+    .navigation {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
         align-items: center;
         width: 100%;
         height: auto;
-        padding-left:16px;
+        padding:0;
+        padding-left: 16px;
     }
-    .navigation__list{
+
+    .navigation__list {
         width: 100%;
-        height:100%;
+        height: 100%;
         margin: 0;
         padding: 0;
         display: flex;
@@ -254,11 +259,7 @@
 
     }
 
-
-
-
-
-    .navigation__link{
+    .navigation__link {
         width: 246px;
         height: 40px;
         box-sizing: border-box;
@@ -270,51 +271,48 @@
         letter-spacing: -0.2px;
         text-align: left;
         padding: 8px 9.3px 8px 16.54px;
-        margin:0;
+        margin: 0;
         text-decoration: none;
         min-height: 40px;
     }
+
     .navigation__link:first-child {
-        margin-left:16px;
+        margin-left: 16px;
     }
 
-    .navigation__link--active{
+    .navigation__link--active {
         border: 2px solid rgb(184, 255, 236);
         border-radius: 6px;
         text-decoration: none;
     }
 
 
-    .article{
+    .article {
         margin: 0;
         padding: 0;
 
     }
 
-    .article__text{
+    .article__text {
         width: 288px;
         height: 90px;
-        margin-left:auto;
-        margin-right:auto;
+        margin-left: auto;
+        margin-right: auto;
         text-align: left;
     }
 
-    .article__text--hidden{
+    .article__text--hidden {
         line-height: 0;
         font-size: 0;
         color: transparent;
+        display: none;
     }
 
-    .article__text--hidden::before{
+    .article__text--hidden::before {
         content: "Читать далее";
         display: inline-block;
 
     }
-
-
-
-
-
 
 
 }
