--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-* {
-    border: 1px solid red;
-}
+/* Общие стили для всех элементов */
+/** {*/
+/*    border: 1px solid red; !* Это временный стиль для отладки *!*/
+/*}*/
 
 /* Стили для мобильной версии (320px) */
 @media screen and (min-width: 320px) {
@@ -28,13 +29,12 @@
         font-size: 14px;
         font-weight: 400;
         line-height: 18px;
-        letter-spacing: 0.2px;
         text-align: left;
     }
 
-    /*header*/
+    /* Шапка */
     .header {
-        /*width: 100%;*/
+        width: 100%;
         height: 88px;
         background: rgb(255, 255, 255);
         display: flex;
@@ -57,8 +57,8 @@
     }
 
     .logo {
-        width: 96.55px;
-        height: 50.81px;
+        width: 97px;
+        height: 51px;
     }
 
     .menu {
@@ -83,96 +83,23 @@
     }
 
     .menu__link {
-
         text-decoration: none;
         width: 100%;
         text-align: center;
         height: 100%;
-
-    }
-
-    /*Скрыть первое меню на маленьком экране*/
-    .menu--primary {
-        display: none;
-    }
-
-    .menu--secondary {
+        display: flex;
         align-items: center;
-
+        justify-content: center;
     }
 
-    /* divider */
-    .menu--secondary::before {
-
-        content: "";
-        display: inline-block;
-        margin: 0 20px; /* Расстояние от разделителя до элементов меню */
-        width: 2px;
-        height: 32px;
-        border-radius: 1px;
-        background: rgb(234, 234, 234);
-        align-self: center;
-        top: 3px;
-
-
-    }
-
-    /*Проверка области наведения*/
-    .menu__link:hover, .menu-burger:hover {
+    .menu__link:hover,
+    .menu-burger:hover {
         outline: 1px solid rgb(255, 62, 121);
         border-radius: 50%;
     }
 
-    /*Иконки меню*/
+    .menu__link::after,
     .menu-burger::after {
-
-        background-image: url('image/burgerburger.svg');
-        width: 40px;
-        height: 40px;
-    }
-
-
-    .menu__link--call::after {
-        content: "";
-        background-image: url('image/callcall.svg');
-        width: 40px;
-        height: 40px;
-    }
-
-    .menu__link--write::after {
-
-        background-image: url('image/chatmessage.svg');
-        width: 40px;
-        height: 40px;
-    }
-
-    .menu__link--login::after {
-        content: "";
-        background-image: url('image/profileuser.svg');
-        width: 40px;
-        height: 40px;
-    }
-
-    .menu__link--status::after {
-        content: "";
-        background-image: url('image/repairsetting.svg');
-        display: block;
-        width: 40px;
-        height: 40px;
-
-    }
-
-    .menu__link--application::after {
-        content: "";
-        background-image: url('image/checkstatussearch.svg');
-        display: block;
-        width: 40px;
-        height: 40px;
-
-
-    }
-
-    menu__link::after, .menu-burger::after {
         content: "";
         display: block;
         width: 40px;
@@ -182,12 +109,42 @@
         background-repeat: no-repeat;
     }
 
-    .menu__link {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    .menu-burger::after {
+
+        background-image: url('image/burgerburger.svg');
+        width: 40px;
+        height: 40px;
     }
 
+    .menu__link--call::after {
+        content: "";
+        background-image: url('image/callcall.svg');
+    }
+
+    .menu__link--write::after {
+        content: "";
+        background-image: url('image/chatmessage.svg');
+    }
+
+    .menu__link--login::after {
+        content: "";
+        background-image: url('image/profileuser.svg');
+    }
+
+    .menu__link--status::after {
+        content: "";
+        background-image: url('image/repairsetting.svg');
+    }
+
+    .menu__link--application::after {
+        content: "";
+        background-image: url('image/checkstatussearch.svg');
+    }
+
+    /*Скрыть первое меню на маленьком экране*/
+    .menu--primary {
+        display: none;
+    }
     /*Скрыть текст в меню*/
     .menu__item--hidden-link {
         line-height: 0;
@@ -195,45 +152,7 @@
         color: transparent;
     }
 
-    /*Content*/
-    .main {
-        magin: 0;
-        padding: 0;
-    }
-
-    .main section {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        margin: 0;
-        padding: 0;
-    }
-
-    .main__title {
-        /*width: 100%;*/
-        height: 40px;
-        text-align: left;
-        margin: 24px 0px;
-        padding: 0 16px;
-        vertical-align: center;
-    }
-
-    /* highlight */
-    .main__title::before {
-
-        content: "";
-        display: inline-block;
-        margin-right: 16px; /* Расстояние от разделителя до элементов меню */
-        border-radius: 1px;
-        align-self: start;
-        vertical-align: middle;
-        width: 4px;
-        height: 40px;
-        transform: rotate(180.00deg);
-        background: rgb(65, 246, 215);
-
-    }
-
+    /* Навигация */
     .navigation {
         display: flex;
         flex-direction: row;
@@ -254,9 +173,8 @@
         flex-direction: row;
         justify-content: flex-start;
         list-style-type: none;
-        overflow-x: scroll;
+        overflow-x: auto;
         white-space: nowrap;
-
     }
 
     .navigation__link {
@@ -270,13 +188,13 @@
         line-height: 24px;
         letter-spacing: -0.2px;
         text-align: left;
-        padding: 8px 9.3px 8px 16.54px;
+        padding: 8px 9px 8px 17px;
         margin: 0;
         text-decoration: none;
         min-height: 40px;
     }
 
-    .navigation__link:first-child {
+    .navigation__list:first-child {
         margin-left: 16px;
     }
 
@@ -286,11 +204,49 @@
         text-decoration: none;
     }
 
+    /* Основное содержимое */
+    .main {
+        margin: 0;
+        padding: 0;
+    }
+
+    .main section {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin: 0;
+        padding: 0;
+    }
+
+    .main__title {
+        width: 100%;
+        height: 40px;
+        text-align: left;
+        margin: 0;
+        padding: 0 16px;
+        vertical-align: center;
+    }
+
+    .main__title::before {
+        content: "";
+        display: inline-block;
+        margin-right: 16px;
+        border-radius: 1px;
+        align-self: start;
+        vertical-align: middle;
+        width: 4px;
+        height: 40px;
+        transform: rotate(180.00deg);
+        background: rgb(65, 246, 215);
+    }
 
     .article {
         margin: 0;
         padding: 0;
-
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
     }
 
     .article__text {
@@ -300,6 +256,10 @@
         margin-right: auto;
         text-align: left;
     }
+    .article__text--primary{
+        padding-top: 8px;
+        padding-bottom: 0;
+    }
 
     .article__text--hidden {
         line-height: 0;
@@ -307,13 +267,31 @@
         color: transparent;
         display: none;
     }
-
-    .article__text--hidden::before {
-        content: "Читать далее";
-        display: inline-block;
-
+    /* ReadMore Copy */
+    .button_read-more:link{
+        all: unset; /*Отключаем все стили. */
+        display: block;
+        width: 132px;
+        height: 48px;
+        color: rgb(27, 28, 33);
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        text-align: left;
+        background-color: white;
+        text-decoration: none;
+        border:none;
     }
-
-
+    .button_read-more:before{
+        content: "";
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        background-image: url('image/expandread-more.svg');
+        vertical-align: middle;
+        margin-right: 8px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
 }
-
