--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    border: 1px solid red;
+}
+
 /* Общие стили для всех элементов */
 body {
     font-family: "TT Lakes", sans-serif;
@@ -7,6 +11,12 @@ body {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 h1 {
@@ -27,11 +37,11 @@ p {
 }
 
 .header {
-    width: 100%;
+    width: auto;
     height: 88px;
     background: rgb(255, 255, 255);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
     padding-left: 16px;
@@ -43,6 +53,12 @@ p {
     padding: 0;
 }
 
+.header__wrapper-burger {
+    width: auto;
+    padding: 0;
+
+}
+
 .menu-burger {
     display: none;
 }
@@ -52,14 +68,26 @@ p {
     height: 51px;
 }
 
+.deliver {
+    border-radius: 1px;
+    background: rgb(183, 182, 182);
+    width: 2px;
+    height: 32px;
+    margin-right: 20px;
+    margin-left: 20px;
+
+}
+
 .menu {
     display: flex;
     justify-content: flex-start;
 }
 
+
 .menu__list {
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 .menu__item {
@@ -82,6 +110,8 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    flex-wrap: nowrap;
 }
 
 .menu__link:hover,
@@ -99,6 +129,7 @@ p {
     text-align: center;
     background-position: center;
     background-repeat: no-repeat;
+
 }
 
 .menu-burger::before {
@@ -133,21 +164,33 @@ p {
 }
 
 .navigation {
-    display:flex;
+    width: 100%;
+    height: 42px;
+    display: inline;
 }
 
 .navigation__list {
     margin: 0;
     padding: 0;
+    width: auto;
+    display: inline;
+    list-style: none;
 }
 
 .navigation__link {
     text-decoration: none;
-    width: 100%;
-    text-align: left;
-    display: block;
-    padding: 8px 16px;
+    width: auto;
     color: rgb(126, 126, 130);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    text-align: left;
+    display: inline-block;
+    padding: 8px 9px 8px 16px;
+    color: rgb(126, 126, 130);
+    flex-wrap: nowrap;
+    vertical-align: center;
 }
 
 .navigation__link--active {
@@ -162,17 +205,14 @@ p {
 }
 
 .main section {
-    margin: 0;
     padding: 0;
 }
 
 .main__title {
-    width: 100%;
+    width: auto;
     text-align: left;
     margin: 0;
     padding: 0 16px;
-    margin-top: 24px;
-    margin-bottom: 24px;
     position: relative;
 }
 
@@ -191,19 +231,16 @@ p {
 }
 
 .article {
-    margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
 
 .article__text {
     width: calc(100% - 32px);
     text-align: left;
-    margin-left: auto;
-    margin-right: auto;
     height: auto;
 }
 
@@ -219,7 +256,6 @@ p {
     background-color: white;
     text-decoration: none;
     border: none;
-    margin-top: 16px;
     cursor: pointer;
 }
 
@@ -230,7 +266,6 @@ p {
     height: 24px;
     background-image: url('image/expandread-more.svg');
     vertical-align: middle;
-    margin-right: 8px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
