--- a/style_768.css
+++ b/style_768.css
@@ -1,5 +1,11 @@
 /* Стили для мобильной версии (768px) */
 @media screen and (min-width: 768px) {
+    .menu-burger {
+        position: relative;
+        display: inline-block;
+    }
+
+
 
 
 }
