--- a/style_1120.css
+++ b/style_1120.css
@@ -88,8 +88,8 @@
 
     .article__image{
         width: 47%;
-        margin-right: 28.65px;
-        margin-bottom: 49px;
+        /*margin-right: 28.65px;*/
+        /*margin-bottom: 49px;*/
 
     }
 
