--- a/style_320.css
+++ b/style_320.css
@@ -1,9 +1,7 @@
 @media screen and (min-width: 320px) {
 
     /* Скрывает меню в блоке main, устанавливая его свойство отображения на none */
-    .main__menu {
-        display: none;
-    }
+
 
     /* Выравнивает содержимое header равномерно с промежутками вокруг каждого элемента */
     .header {
@@ -27,12 +25,12 @@
         display: none;
     }
 
-    /* Отображает пункты меню в виде гибких элементов */
+
     .menu {
         display: flex;
     }
 
-    /* Скрывает текст ссылки на элемент меню, устанавливая ее размер шрифта на 0 и сдвигая текст за пределы видимой области */
+    /* Скрывает текст ссылки на элемент меню */
     .menu__item--hidden-link {
         /*font-size: 0;*/
         /*text-indent: 100%;*/
@@ -123,6 +121,10 @@
     .article__button {
         margin-left: 0;
         margin-right: auto;
+    }
+
+    .main__menu {
+        display: none;
     }
 
 }
