--- a/style_768.css
+++ b/style_768.css
@@ -57,10 +57,11 @@
 
     /* Отображает контент статьи как гибкие элементы в колонку с пространством между ними и центрирует их */
     .article__content {
+        height: auto;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: stretch;
+        justify-content: flex-start;
+        align-items: flex-start;
         width: 40%;
     }
 
@@ -76,7 +77,7 @@
     .article__image{
         width: 46%;
         height: auto;
-       
+
     }
 
 
