--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 /*}*/
 
 .wrapper {
-    width: auto;
-    margin: 0 auto;
+    /*width: auto;*/
+    /*margin: 0 auto;*/
     box-sizing: border-box;
 }
 
